[package]
name = "rusty-boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.11.0"
imgui-glow-renderer = "0.11.0"
imgui-sdl2-support = "0.11.0"
glow = "0.12.0"
sdl2 = "0.34.5"
once_cell = "1.17"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.1"
flate2 = "1.0.26"
cpal = "0.15.2"
num-traits = "0.2.15"
parking_lot = "0.12.1"

[profile.release]
debug = true
